--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,9 @@
             ],
             "styles": [
               "src/theme.less",
-              "src/styles.css"
+              "src/styles.css",
+              "src/assets/css/main.css",
+              "src/assets/css/public.css"
             ],
             "scripts": [],
             "es5BrowserSupport": true
