--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "core-js": "^2.5.4",
+    "linqts": "^1.12.2",
     "e-ngx-print": "^5.3.1",
     "echarts": "^4.1.0",
-    "ng-zorro-antd": "^7.1.0",
+    "ng-zorro-antd": "^7.2.0",
     "ngx-echarts": "^4.1.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
